# WaterMill

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
WaterPump/: WaterPump.ino
main/: CMakeLists.txt  config.h.example  index.html  led.c  led.h  logger.c  logger.h  main.c  ota.c  ota.h  pump.c  pump.h  touch.c  touch.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
pcb/: pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch
